--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,8 @@
   %head
     %meta{:charset => "utf-8"}
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
-    %title Heroku ecosystem presentation
-    %meta{:content => "Heroku Rails pesentations for Tquila Labs", :name => "description"}
+    %title 'Geek slideshows' a Sinatra - Deck.js song improvised by @vzmind
+    %meta{:content => "'Geek slideshow'a sinatra - deck.js song improvised by @vzmind", :name => "description"}
     %meta{:content => "width=1024, user-scalable=no", :name => "viewport"}
     / Core and extension CSS files
     %link{:href => "deck.js/core/deck.core.css", :rel => "stylesheet"}
