--- a/views/intro.haml
+++ b/views/intro.haml
@@ -57,6 +57,11 @@
         and 
         %a{:href => "http://sinatrarb.com"}
           sinatra
+    %br/
+    %p
+      Thanks for listening.  Follow me on 
+      %a{:href => "http://twitter.com/vzmind"}
+        @vzmind
 
 
 
